<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    /**
     * Run the migrations.
     */
    public function up()
        {
            Schema::create('checklist', function (Blueprint $table) {
                $table->id('checkListID');
                $table->string('section', 100);
                $table->json('values');
                $table->foreignId('proposalID')->constrained('proposals', 'proposalID');
                $table->timestamps();
            });
        }

    /**
     * Reverse the migrations.
     */
    public function down(): void
    {
        Schema::dropIfExists('checklist');
    }
};
